versions/v2.11/modules/en/pages/rancher-admin/experimental-features/istio-traffic-management-features.adoc
= UI for Istio Virtual Services and Destination Rules
:page-languages: [en, zh]
:revdate: 2025-03-12
:page-revdate: {revdate}
:page-community-path: how-to-guides/advanced-user-guides/enable-experimental-features/istio-traffic-management-features.adoc 
:page-product-path: rancher-admin/experimental-features/istio-traffic-management-features.adoc
ifeval::["{build-type}" != "community"]
:xref-experimental-features: xref:rancher-admin/experimental-features/experimental-features.adoc
:xref-istio-guides: xref:observability/istio/guides/guides.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-experimental-features: xref:how-to-guides/advanced-user-guides/enable-experimental-features/index.adoc
:xref-istio-guides: xref:how-to-guides/advanced-user-guides/istio-setup-guide/index.adoc
endif::[]

This feature enables a UI that lets you create, read, update and delete virtual services and destination rules, which are traffic management features of Istio.

____
*Prerequisite:* Turning on this feature does not enable Istio. A cluster administrator needs to {xref-istio-guides}[enable Istio for the cluster] in order to use the feature.
____

To enable or disable this feature, refer to the instructions on {xref-experimental-features}[the main page about enabling experimental features.]

|===
| Environment Variable Key | Default Value | Status | Available as of

| `istio-virtual-service-ui`
| `false`
| Experimental
| v2.3.0

| `istio-virtual-service-ui`
| `true`
| GA
| v2.3.2
|===

== About this Feature

A central advantage of Istio's traffic management features is that they allow dynamic request routing, which is useful for canary deployments, blue/green deployments, or A/B testing.

When enabled, this feature turns on a page that lets you configure some traffic management features of Istio using the Rancher UI. Without this feature, you need to use `kubectl` to manage traffic with Istio.

The feature enables two UI tabs: one tab for *Virtual Services* and another for *Destination Rules*.

* *Virtual services* intercept and direct traffic to your Kubernetes services, allowing you to direct percentages of traffic from a request to different services. You can use them to define a set of routing rules to apply when a host is addressed. For details, refer to the https://istio.io/docs/reference/config/networking/v1alpha3/virtual-service/[Istio documentation.]
* *Destination rules* serve as the single source of truth about which service versions are available to receive traffic from virtual services. You can use these resources to define policies that apply to traffic that is intended for a service after routing has occurred. For details, refer to the https://istio.io/docs/reference/config/networking/v1alpha3/destination-rule[Istio documentation.]

To see these tabs,

. Click *☰ > Cluster Management*.
. Go to the cluster where Istio is installed and click *Explore*.
. In the left navigation bar, click *Istio*.
. You will see tabs for *Kiali* and *Jaeger*. From the left navigation bar, you can view and configure *Virtual Services* and *Destination Rules*.
